--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -3,5 +3,8 @@
 spring.kafka.properties.ssl.endpoint.identification.algorithm=http
 spring.kafka.properties.sasl.mechanism=PLAIN
 spring.kafka.properties.security.protocol=PLAINTEXT
+
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
