--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -8,3 +8,6 @@ spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.Strin
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+
+spring.kafka.consumer.group-id = UnitTest
+spring.kafka.consumer.auto-offset-reset=earliest 
