--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,24 @@
+# App
+chat.topics.in.chat=input
+chat.topics.out.input=input
+
 
 # Kafka
+spring.kafka.consumer.group-id = chat
+
 spring.kafka.properties.ssl.endpoint.identification.algorithm=https
 spring.kafka.properties.sasl.mechanism=PLAIN
 spring.kafka.properties.bootstrap.servers=${KAFKA_SERVER}
 spring.kafka.properties.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule   required username="${KAFKA_API_KEY}"   password="${KAFKA_API_SECRET}";
 spring.kafka.properties.security.protocol=SASL_SSL
-# Schema Registry
-#spring.kafka.properties.basic.auth.credentials.source=USER_INFO
-#spring.kafka.properties.schema.registry.basic.auth.user.info={{ SR_API_KEY }}:{{ SR_API_SECRET }}
-#spring.kafka.properties.schema.registry.url=https://psrc-lgy7n.europe-west3.gcp.confluent.cloud
-# producer configuration
-spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+
+# Kafka Serde
+spring.kafka.producer.key-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
-# consumer configuration
-#spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-#spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.key-deserializer=org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
+
+spring.kafka.spring.deserializer.key.delegate.class=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.spring.deserializer.value.delegate.class=org.springframework.kafka.support.serializer.JsonDeserializer
+
+spring.json.trusted.packages=tp.kafka.chat.*
