--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,8 +17,9 @@ spring.kafka.producer.key-serializer=org.springframework.kafka.support.serialize
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 spring.kafka.consumer.key-deserializer=org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=tp.kafka.chat
 
-spring.kafka.spring.deserializer.key.delegate.class=org.springframework.kafka.support.serializer.JsonDeserializer
-spring.kafka.spring.deserializer.value.delegate.class=org.springframework.kafka.support.serializer.JsonDeserializer
-
-spring.json.trusted.packages=tp.kafka.chat.*
+spring.kafka.properties.spring.deserializer.key.delegate.class=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.properties.spring.deserializer.value.delegate.class=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.properties.spring.json.use.type.headers=false
+spring.kafka.properties.spring.json.value.default.type=tp.kafka.chat.RichChatMessage
