--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,13 +5,16 @@
   "customizations": {
     "vscode": {
       "extensions": [
-        "redhat.java",
-        "redhat.vscode-quarkus",
-        "redhat.vscode-microprofile",
-        "redhat.vscode-commons",
-        "gabrielbb.vscode-lombok"
-      ]
+		"vscjava.vscode-java-debug",
+		"vscjava.vscode-java-pack",
+		"vscjava.vscode-lombok",
+		"DavidAnson.vscode-markdownlint",
+		"redhat.vscode-quarkus",
+		"redhat.vscode-microprofile"
+	]
     }
   },
-  "forwardPorts": [8080]
+  "forwardPorts": [
+    8080
+  ]
 }
