--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,3 +1,11 @@
 ARG VARIANT=17-jdk-bullseye
 FROM mcr.microsoft.com/vscode/devcontainers/java:${VARIANT}
+RUN sdk install maven
+#RUN sdk install quarkus
+RUN sdk install springboot
+
+
+#ARG VARIANT=17-buster
+#FROM mcr.microsoft.com/vscode/devcontainers/typescript-node:${VARIANT}
+#RUN npm install -g @angular/cli
 
