--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,9 +1,12 @@
-ARG VARIANT=17-jdk-bullseye
+ARG VARIANT=17-buster
 FROM mcr.microsoft.com/vscode/devcontainers/java:${VARIANT}
-RUN sdk install maven
-#RUN sdk install quarkus
-RUN sdk install springboot
+SHELL ["/bin/bash", "-c"]
+RUN source /usr/local/sdkman/bin/sdkman-init.sh; \
+    sdk install maven; \
+    sdk install springboot;
 
+#RUN sdk install quarkus
+#RUN sdk install springboot
 
 #ARG VARIANT=17-buster
 #FROM mcr.microsoft.com/vscode/devcontainers/typescript-node:${VARIANT}
