--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,5 +1,15 @@
-version: '3'
+version: '3.8'
+
 services:
+  chat:
+    build:
+      context: ..
+      dockerfile: .devcontainer/Dockerfile
+    volumes:
+      - ..:/workspace:cached
+    command: sleep infinity
+    network_mode: service:kafka
+
   kafka:
     image: bitnami/kafka:3.1.0
     container_name: kafka
