working DinD setup

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -4,7 +4,9 @@ SHELL ["/bin/bash", "-c"]
 RUN source /usr/local/sdkman/bin/sdkman-init.sh; \
     sdk install maven; \
     sdk install springboot;
-
+RUN apt-get update; \
+    apt-get install -y docker.io;
+    
 #RUN sdk install quarkus
 #RUN sdk install springboot
 
