--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,5 +20,6 @@
     8080,
     9000
   ],
-  "dockerComposeFile": "docker-compose.yml"
+  "dockerComposeFile": "docker-compose.yml",
+  "service": "dev"
 }
