--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -21,5 +21,9 @@
     9000
   ],
   "dockerComposeFile": "docker-compose.yml",
-  "service": "dev"
+  "service": "dev",
+
+	"features": {
+		"ghcr.io/devcontainers/features/docker-outside-of-docker:1": {}
+	}
 }
