--- a/pom.xml
+++ b/pom.xml
@@ -83,5 +83,8 @@
 			<url>https://repo.spring.io/milestone</url>
 		</pluginRepository>
 	</pluginRepositories>
-
+	<scm>
+		<connection>scm:git:git@github.com:tp-kafka/chat.git</connection>
+		<url>https://github.com/tp-kafka/chat</url>
+  	</scm>
 </project>
