--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,15 +24,19 @@ jobs:
           cache: 'maven'
           check-latest: true
   
-      - name: Create Tag
-        run: |
-          mvn se.bjurr.gitchangelog:git-changelog-maven-plugin:1.96.1:semantic-version
-          mvn -Dfile=target/CHANGELOG.md se.bjurr.gitchangelog:git-changelog-maven-plugin:1.96.1:git-changelog
-          mvn --batch-mode -DscmCommentPrefix="chore(release): :bookmark:" release:prepare
-          echo "TAG=v$(mvn -f pom.xml.tag help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
-        env:
-          GITHUB_TOKEN: ${{ github.token }}            
+      - name: Calculate semantic version
+        run: mvn se.bjurr.gitchangelog:git-changelog-maven-plugin:1.96.1:semantic-version
 
+      - name: Generate Changelog
+          run: mvn -Dfile=target/CHANGELOG.md se.bjurr.gitchangelog:git-changelog-maven-plugin:1.96.1:git-changelog
+
+      - name: Create Tag and Update Main-Branch
+            run: |
+              mvn --batch-mode -DscmCommentPrefix="chore(release): :bookmark:" release:prepare
+              echo "TAG=v$(mvn -f pom.xml.tag help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
+            env:
+              GITHUB_TOKEN: ${{ github.token }}            
+        
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
