--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,10 +25,10 @@ jobs:
           check-latest: true
   
       - name: Calculate semantic version
-        run: mvn se.bjurr.gitchangelog:git-changelog-maven-plugin:1.96.1:semantic-version
+        run: mvn --batch-mode se.bjurr.gitchangelog:git-changelog-maven-plugin:1.96.1:semantic-version
 
       - name: Generate Changelog
-        run: mvn -Dfile=target/CHANGELOG.md se.bjurr.gitchangelog:git-changelog-maven-plugin:1.96.1:git-changelog
+        run: mvn --batch-mode -Dfile=target/CHANGELOG.md se.bjurr.gitchangelog:git-changelog-maven-plugin:1.96.1:git-changelog
 
       - name: Create Tag and Update Main-Branch
         run: |
