--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,8 @@ jobs:
           distribution: 'adopt'
           cache: 'maven'
           check-latest: true
-  
+          server-id: github
+
       - name: Calculate semantic version
         run: mvn --no-transfer-progress se.bjurr.gitchangelog:git-changelog-maven-plugin:1.96.1:semantic-version
 
