chore(release): :bookmark: prepare release v0.0.1

--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -11,7 +8,7 @@
 	</parent>
 	<groupId>tp.kafka</groupId>
 	<artifactId>chat</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>chat</name>
 	<description>Chat Application</description>
 
@@ -99,5 +96,6 @@
 	<scm>
 		<connection>scm:git:https://github.com/tp-kafka/chat</connection>
 		<url>https://github.com/tp-kafka/chat</url>
-	</scm>
+	  <tag>v0.0.1</tag>
+  </scm>
 </project>
