--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,9 +24,9 @@ jobs:
           cache: 'maven'
           check-latest: true
 
-      - name: Debug Settings
-        run: mvn help:effective-settings
-        
+      - name: Fetch tags
+        run: git fetch --tags origin
+
       - name: Calculate semantic version
         run: mvn --no-transfer-progress se.bjurr.gitchangelog:git-changelog-maven-plugin:1.96.1:semantic-version
 
