--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -19,7 +19,7 @@ services:
 
   kafka0:
     network_mode: "service:dev"
-    image: confluentinc/cp-kafka:7.2.1
+    image: confluentinc/confluent-local:7.5.1
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: 'CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT'
@@ -38,9 +38,6 @@ services:
       KAFKA_INTER_BROKER_LISTENER_NAME: 'PLAINTEXT'
       KAFKA_CONTROLLER_LISTENER_NAMES: 'CONTROLLER'
       KAFKA_LOG_DIRS: '/tmp/kraft-combined-logs'
-    volumes:
-      - ./compose/scripts/update_run.sh:/tmp/update_run.sh
-    command: "bash -c 'if [ ! -f /tmp/update_run.sh ]; then echo \"ERROR: Did you forget the update_run.sh file that came with this docker-compose.yml file?\" && exit 1 ; else /tmp/update_run.sh && /etc/confluent/docker/run ; fi'"
 
   schema-registry0:
     network_mode: "service:dev"
@@ -98,13 +95,8 @@ services:
   kafka-init-topics:
     network_mode: "service:dev"
     image: confluentinc/cp-kafka:7.2.1
-    volumes:
-       - ./compose/message.json:/data/message.json
     depends_on:
       - kafka0
     command: "bash -c 'echo Waiting for Kafka to be ready... && \
                cub kafka-ready -b localhost:29092 1 60 && \
-               kafka-topics --create --topic second.users --partitions 3 --replication-factor 1 --if-not-exists --bootstrap-server localhost:29092 && \
-               kafka-topics --create --topic second.messages --partitions 2 --replication-factor 1 --if-not-exists --bootstrap-server localhost:29092 && \
-               kafka-topics --create --topic first.messages --partitions 2 --replication-factor 1 --if-not-exists --bootstrap-server localhost:29092 && \
-               kafka-console-producer --bootstrap-server localhost:29092 --topic second.users < /data/message.json'"
+               kafka-topics --create --topic chat --partitions 3 --replication-factor 1 --if-not-exists --bootstrap-server localhost:29092'"
