--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,7 +15,7 @@
         "vivaxy.vscode-conventional-commits",
         "42Crunch.vscode-openapi",
         "vscjava.vscode-spring-boot-dashboard",
-        "vmware.vscode-spring-boot"
+        "vmware.vscode-boot-dev-pack"
       ]
     }
   },
