--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,7 +15,8 @@
         "vivaxy.vscode-conventional-commits",
         "42Crunch.vscode-openapi",
         "vscjava.vscode-spring-boot-dashboard",
-        "vmware.vscode-boot-dev-pack"
+        "vmware.vscode-boot-dev-pack",
+        "redhat.fabric8-analytics"
       ]
     }
   },
