--- a/src/main/api/chat.yml
+++ b/src/main/api/chat.yml
@@ -3,17 +3,6 @@ info:
   version: 1.0.0
   title: Chat Application API 
 
-servers:
-  - url: https://{codespace}-9000.app.github.dev
-    description: Codespace
-    variables:
-      codespace:
-        description: Codespace URL
-        default: unknown
-  - url: http://localhost:9000/chat
-    description: Local Development
-
-
 paths:
   /messages:
     post:
@@ -21,7 +10,7 @@ paths:
       summary: Send a Message to the Chat Application
       description: This endpoint allows you to send a chat message to the application
       tags:
-        - messsages
+        - messages
       requestBody:
         content:
           application/json:
