--- a/src/main/api/examples/hello_world.yml
+++ b/src/main/api/examples/hello_world.yml
@@ -1,4 +1,8 @@
-summary: Hello World
-description: Send a Hello World Message.
+summary: "Hello World to #test"
+description: Send a Hello World Message to the channel "#test".
 value: |
-  TODO
+  {
+    "channel": "#test",
+    "message": "hello world.",
+    "nick": "user"
+  }
